updated a few pages

--- a/lawn-basics/can-grass-recover-after-being-scalped.html
+++ b/lawn-basics/can-grass-recover-after-being-scalped.html
@@ -5,27 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Can Grass Recover After Being Scalped</title>
-  <meta name="description" content="Grass can recover after scalping if crowns remain intact and carbohydrate reserves are sufficient to rebuild lost photosynthetic tissue.">
+  <meta name="description" content="Scalping a lawn looks disastrous, but recovery is sometimes possible. Learn when grass can bounce back and when damage is permanent.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/can-grass-recover-after-being-scalped.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Can Grass Recover After Being Scalped">
-  <meta property="og:description" content="Grass can recover after scalping if crowns remain intact and carbohydrate reserves are sufficient to rebuild lost photosynthetic tissue.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/can-grass-recover-after-being-scalped.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Can Grass Recover After Being Scalped">
+  <meta name="twitter:description" content="Scalping a lawn looks disastrous, but recovery is sometimes possible. Learn when grass can bounce back and when damage is permanent.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
+  <!-- Open Graph -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
+  <meta property="og:title" content="Can Grass Recover After Being Scalped">
+  <meta property="og:description" content="Scalping a lawn looks disastrous, but recovery is sometimes possible. Learn when grass can bounce back and when damage is permanent.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/can-grass-recover-after-being-scalped.html">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -41,7 +48,6 @@
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
 
-    <!-- On-site search (autocomplete; never leaves your site) -->
     <div class="search-wrap" role="search">
       <input
         id="siteSearch"
@@ -49,53 +55,38 @@
         type="search"
         placeholder="Search GrizzlyGreens..."
         autocomplete="off"
-        autocapitalize="off"
         spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
       >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
+      <div id="searchResults" class="search-results"></div>
     </div>
   </header>
 
   <main class="container">
     <h1>Can Grass Recover After Being Scalped</h1>
 
-<h2>Scalping as extreme leaf removal</h2>
-<p>Scalping removes nearly all photosynthetic tissue, eliminating the plant’s ability to produce carbohydrates in the short term.</p>
-<p>Recovery depends entirely on stored energy and the integrity of the crown.</p>
+<h2>What scalping does to a lawn right away</h2>
+<p>Scalping happens when grass is cut far shorter than it should be. The lawn suddenly looks brown, thin, and uneven. This can be alarming, especially if it happens all at once.</p>
+<p>Some lawns look worse than they really are at first. Others are badly damaged and struggle to respond. The outcome depends on how severe the cut was and what shape the lawn was in before.</p>
 
-<h2>Crown survival as the recovery threshold</h2>
-<p>The crown contains the growth point from which new leaves emerge.</p>
-<p>If the crown remains intact and hydrated, regrowth is biologically possible.</p>
-<p>If the crown is damaged by heat, desiccation, or mechanical injury, recovery cannot occur.</p>
+<h2>When recovery is still possible</h2>
+<p>Grass can sometimes recover if the cut was a one-time mistake. Lawns that were healthy beforehand usually respond better. With time, color and thickness can slowly return.</p>
+<p>Even recovery lawns often look patchy during the process. Growth may come back uneven at first. This can make the yard appear worse before it improves.</p>
 
-<h2>Carbohydrate reserve depletion</h2>
-<p>Regrowing leaf tissue requires significant energy.</p>
-<p>Stored carbohydrates are consumed rapidly after scalping.</p>
-<p>Repeated scalping events exhaust reserves and slow or prevent regrowth.</p>
+<h2>Signs the lawn is failing instead of rebounding</h2>
+<p>If bare soil stays visible for weeks, recovery may not be happening. Areas that stay thin or don’t green up are warning signs. These spots often continue to decline.</p>
+<p>Repeated problems usually point to deeper issues. In those cases, repair may no longer be practical. <a href="signs-a-lawn-needs-to-be-replaced.html">Signs a Lawn Needs to Be Replaced</a> outlines when starting over makes more sense.</p>
 
-<h2>Root system response</h2>
-<p>Severe leaf loss triggers root contraction.</p>
-<p>Reduced root mass limits water and nutrient uptake.</p>
-<p>This feedback slows recovery even under favorable conditions.</p>
+<h2>Uneven regrowth and clumping</h2>
+<p>Scalped lawns often grow back unevenly. Some areas fill in while others lag behind. This creates a patchy or clumpy appearance.</p>
+<p>Clumps form when growth concentrates in certain spots. The lawn loses its smooth, even look. <a href="why-grass-grows-in-clumps.html">Why Grass Grows in Clumps</a> explains why this happens after damage.</p>
 
-<h2>Environmental moderation of recovery</h2>
-<p>Cool temperatures and adequate moisture reduce respiration demand.</p>
-<p>Hot, dry conditions accelerate reserve loss and crown stress.</p>
-<p>Environmental context strongly influences outcomes.</p>
+<h2>How additional stress affects recovery</h2>
+<p>After scalping, grass is more sensitive to other problems. Heat, foot traffic, and missed watering make recovery harder. Damage can pile up quickly.</p>
+<p>Lawns already under strain may stall completely. Stress reactions become more obvious during this time. <a href="how-grass-responds-to-stress.html">How Grass Responds to Stress</a> explains common patterns.</p>
 
-<h2>Species-dependent tolerance</h2>
-<p>Some grasses evolved under grazing pressure and tolerate severe defoliation.</p>
-<p>Others lack sufficient reserve capacity and decline rapidly.</p>
-
-<h2>Distinguishing recovery from failure</h2>
-<p>Gradual regrowth indicates surviving crowns and remaining reserves.</p>
-<p>Persistent bare crowns indicate irreversible damage.</p>
-
-<h2>Conclusion</h2>
-<p>Grass recovery after scalping is possible but limited. Crown survival and energy reserves determine whether regrowth occurs or decline becomes permanent.</p>
+<h2>Deciding what to do next</h2>
+<p>Some scalped lawns slowly recover with patience and lighter mowing. Others never return to a full, even state. Watching how the lawn responds over several weeks helps guide the decision.</p>
+<p>If improvement is minimal, repairs may outweigh the benefits. At that point, replacement or major renovation may be the better option. Making that call early can save time and effort.</p>
   </main>
 
   <footer class="site-footer">
@@ -103,12 +94,10 @@
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
       <a href="/privacy.html">Privacy Policy</a>
-      <a href="/sitemap.xml">Sitemap</a>
     </div>
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
