--- a/lawn-basics/does-grass-grow-at-night.html
+++ b/lawn-basics/does-grass-grow-at-night.html
@@ -5,27 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Does Grass Grow at Night</title>
-  <meta name="description" content="Grass does not photosynthesize at night, but growth-related processes continue using carbohydrates produced during daylight hours.">
+  <meta name="description" content="Grass can appear to grow overnight, but the real changes happen over time. Learn what affects growth timing and lawn appearance.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/does-grass-grow-at-night.html">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Does Grass Grow at Night">
-  <meta property="og:description" content="Grass does not photosynthesize at night, but growth-related processes continue using carbohydrates produced during daylight hours.">
-  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/does-grass-grow-at-night.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Does Grass Grow at Night">
+  <meta name="twitter:description" content="Grass can appear to grow overnight, but the real changes happen over time. Learn what affects growth timing and lawn appearance.">
+  <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Google tag -->
-  <!-- Google tag (gtag.js) -->
+  <!-- Open Graph -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="GrizzlyGreens.net">
+  <meta property="og:title" content="Does Grass Grow at Night">
+  <meta property="og:description" content="Grass can appear to grow overnight, but the real changes happen over time. Learn what affects growth timing and lawn appearance.">
+  <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/does-grass-grow-at-night.html">
+  <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MXR7KVMW56"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-MXR7KVMW56');
 </script>
 </head>
@@ -41,7 +48,6 @@
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
 
-    <!-- On-site search (autocomplete; never leaves your site) -->
     <div class="search-wrap" role="search">
       <input
         id="siteSearch"
@@ -49,48 +55,38 @@
         type="search"
         placeholder="Search GrizzlyGreens..."
         autocomplete="off"
-        autocapitalize="off"
         spellcheck="false"
-        aria-label="Search GrizzlyGreens"
-        aria-expanded="false"
-        aria-controls="searchResults"
       >
-      <div id="searchResults" class="search-results" role="listbox" aria-label="Search results"></div>
+      <div id="searchResults" class="search-results"></div>
     </div>
   </header>
 
   <main class="container">
     <h1>Does Grass Grow at Night</h1>
 
-<h2>Photosynthesis versus growth processes</h2>
-<p>Photosynthesis requires light and stops entirely after sunset. Growth, however, is the result of cell division and expansion, which do not require light directly.</p>
-<p>This distinction explains why grass can appear to grow overnight despite producing no new energy during darkness.</p>
+<h2>Why grass looks taller in the morning</h2>
+<p>Many people notice their lawn looks taller first thing in the morning. This can make it seem like grass grows overnight. In reality, the change is gradual and easier to notice after several hours.</p>
+<p>Moisture and cooler temperatures often make grass stand more upright. That makes the lawn look fuller without new growth happening all at once. The effect is mostly visual.</p>
 
-<h2>Carbohydrate use after sunset</h2>
-<p>Carbohydrates produced during daylight are stored temporarily in leaves, crowns, and roots.</p>
-<p>At night, these reserves fuel respiration, tissue maintenance, and limited growth processes.</p>
-<p>Net growth depends on whether daytime production exceeded nighttime consumption.</p>
+<h2>What actually affects daily growth</h2>
+<p>Grass grows based on conditions over time, not just during certain hours. Warm days, enough water, and regular mowing all influence how fast it fills in. Nighttime alone does not drive growth.</p>
+<p>When conditions stay steady, growth appears consistent from day to day. When something changes, growth slows or speeds up. These shifts are easier to notice over a week than overnight.</p>
 
-<h2>Respiration rate and temperature</h2>
-<p>Respiration occurs continuously and increases with temperature.</p>
-<p>Cool nights reduce carbohydrate loss, improving growth efficiency.</p>
-<p>Warm nights accelerate respiration and reduce net growth potential.</p>
+<h2>Why some areas seem to grow faster</h2>
+<p>Not all parts of a lawn behave the same way. Edges, sunny areas, and watered zones often grow unevenly. This can make it look like certain spots grow faster at night.</p>
+<p>Hard surfaces nearby can affect how grass behaves. Driveway edges often look different from the rest of the yard. <a href="why-grass-dies-along-driveways.html">Why Grass Dies Along Driveways</a> explains why those areas stand out.</p>
 
-<h2>Cell expansion and water relations</h2>
-<p>Lower nighttime evaporation increases leaf water content.</p>
-<p>Higher turgor pressure allows cells to elongate, contributing to blade extension.</p>
-<p>This mechanical expansion creates the perception of night growth.</p>
+<h2>How mowing changes what you notice</h2>
+<p>Mowing resets how tall the lawn looks. After a cut, even small changes seem more noticeable. This can give the impression of fast growth.</p>
+<p>Repeated mowing over time affects how evenly the lawn fills in. Some lawns slowly thin out as years pass. <a href="why-lawns-decline-over-time.html">Why Lawns Decline Over Time</a> explains how that happens.</p>
 
-<h2>Seasonal influence on nighttime growth</h2>
-<p>In spring and fall, cool nights and moderate days favor efficient carbohydrate use.</p>
-<p>In summer, warm nights limit recovery and growth despite adequate daylight.</p>
+<h2>What happens below the surface after mowing</h2>
+<p>Mowing does more than change appearance. It affects how the lawn responds afterward. The timing and height of cuts influence how evenly grass returns.</p>
+<p>Cutting too short too often can slow recovery. Over time, this weakens the lawn’s overall look. <a href="what-happens-to-grass-roots-when-you-mow.html">What Happens to Grass Roots When You Mow</a> explains this effect.</p>
 
-<h2>Limits of nighttime growth</h2>
-<p>No growth can occur if carbohydrate reserves are depleted.</p>
-<p>Extended stress during the day reduces the resources available for overnight processes.</p>
-
-<h2>Conclusion</h2>
-<p>Grass does not generate energy at night. Observed nighttime growth reflects how efficiently stored carbohydrates are used under favorable conditions.</p>
+<h2>What to expect from day to day</h2>
+<p>Grass does not suddenly grow while everyone sleeps. Growth is steady and shaped by conditions across many days. Morning changes are usually visual, not new growth.</p>
+<p>Watching the lawn over a week gives a clearer picture than checking it each night. Consistent care leads to steady results. Understanding that helps set realistic expectations.</p>
   </main>
 
   <footer class="site-footer">
@@ -98,12 +94,10 @@
       <a href="/about.html">About</a>
       <a href="/disclaimer.html">Disclaimer</a>
       <a href="/privacy.html">Privacy Policy</a>
-      <a href="/sitemap.xml">Sitemap</a>
     </div>
     <div class="footer-copy">© 2025 GrizzlyGreens.net</div>
   </footer>
 
-  <!-- This must exist at /search.js in your repo root -->
-   <script src="/search.js"></script>
+  <script src="/search.js"></script>
 </body>
 </html>
