--- a/lawn-basics/can-grass-recover-after-being-scalped.html
+++ b/lawn-basics/can-grass-recover-after-being-scalped.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Can Grass Recover After Being Scalped</title>
-  <meta name="description" content="Scalping a lawn looks disastrous, but recovery is sometimes possible. Learn when grass can bounce back and when damage is permanent.">
+  <meta name="description" content="Scalping a lawn looks severe, but recovery is sometimes possible. Learn when grass will return and when replacement is the better move.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/can-grass-recover-after-being-scalped.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,17 +14,15 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Can Grass Recover After Being Scalped">
-  <meta name="twitter:description" content="Scalping a lawn looks disastrous, but recovery is sometimes possible. Learn when grass can bounce back and when damage is permanent.">
+  <meta name="twitter:description" content="Scalping a lawn looks severe, but recovery is sometimes possible. Learn when grass will return and when replacement is the better move.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Open Graph -->
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Can Grass Recover After Being Scalped">
-  <meta property="og:description" content="Scalping a lawn looks disastrous, but recovery is sometimes possible. Learn when grass can bounce back and when damage is permanent.">
+  <meta property="og:description" content="Scalping a lawn looks severe, but recovery is sometimes possible. Learn when grass will return and when replacement is the better move.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/can-grass-recover-after-being-scalped.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
 
@@ -47,46 +45,34 @@
       <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
-
-    <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        spellcheck="false"
-      >
-      <div id="searchResults" class="search-results"></div>
-    </div>
   </header>
 
   <main class="container">
     <h1>Can Grass Recover After Being Scalped</h1>
 
 <h2>What scalping does to a lawn right away</h2>
-<p>Scalping happens when grass is cut far shorter than it should be. The lawn suddenly looks brown, thin, and uneven. This can be alarming, especially if it happens all at once.</p>
-<p>Some lawns look worse than they really are at first. Others are badly damaged and struggle to respond. The outcome depends on how severe the cut was and what shape the lawn was in before.</p>
+<p>Scalping happens when grass is cut far lower than it should be, exposing bare soil and leaving the yard looking damaged. The lawn usually turns pale or brown almost immediately, which alarms most homeowners. This sudden change makes it hard to tell whether the damage is temporary or serious.</p>
+<p>The key point is that appearance alone does not decide the outcome. Some lawns rebound while others continue to decline. What matters is how deeply the cut affected the lawn’s ability to regrow, so the takeaway is to pause and observe before taking action.</p>
 
 <h2>When recovery is still possible</h2>
-<p>Grass can sometimes recover if the cut was a one-time mistake. Lawns that were healthy beforehand usually respond better. With time, color and thickness can slowly return.</p>
-<p>Even recovery lawns often look patchy during the process. Growth may come back uneven at first. This can make the yard appear worse before it improves.</p>
+<p>Recovery is most likely when the lawn was thick and healthy before the scalping happened. In those cases, new growth usually starts showing within a few weeks, even if it looks uneven at first. Patience is required because early regrowth rarely looks smooth.</p>
+<p>This means a one-time mistake does not automatically ruin a lawn. If new green growth appears and spreads, recovery is underway. The takeaway is to give the lawn time before deciding it has failed.</p>
 
 <h2>Signs the lawn is failing instead of rebounding</h2>
-<p>If bare soil stays visible for weeks, recovery may not be happening. Areas that stay thin or don’t green up are warning signs. These spots often continue to decline.</p>
-<p>Repeated problems usually point to deeper issues. In those cases, repair may no longer be practical. <a href="signs-a-lawn-needs-to-be-replaced.html">Signs a Lawn Needs to Be Replaced</a> outlines when starting over makes more sense.</p>
+<p>When large bare areas stay unchanged for weeks, recovery is unlikely. Grass that fails to return in those spots usually continues thinning instead of filling in. This pattern signals deeper damage rather than slow regrowth.</p>
+<p>At that point, repairs often become temporary fixes that do not last. Repeated patching leads to frustration and uneven results. <a href="signs-a-lawn-needs-to-be-replaced.html">Signs a Lawn Needs to Be Replaced</a> outlines when replacement is the smarter choice, so the takeaway is to recognize when recovery has stalled.</p>
 
 <h2>Uneven regrowth and clumping</h2>
-<p>Scalped lawns often grow back unevenly. Some areas fill in while others lag behind. This creates a patchy or clumpy appearance.</p>
-<p>Clumps form when growth concentrates in certain spots. The lawn loses its smooth, even look. <a href="why-grass-grows-in-clumps.html">Why Grass Grows in Clumps</a> explains why this happens after damage.</p>
+<p>Scalped lawns that do recover often come back unevenly. Some areas grow quickly while others lag behind, creating a clumpy or rough appearance. This makes the yard look patchy even when growth has resumed.</p>
+<p>This uneven pattern usually improves slowly with consistent mowing and care. It is not a sign of failure, just an adjustment period. <a href="why-grass-grows-in-clumps.html">Why Grass Grows in Clumps</a> explains this behavior, so the takeaway is not to panic when regrowth looks uneven.</p>
 
 <h2>How additional stress affects recovery</h2>
-<p>After scalping, grass is more sensitive to other problems. Heat, foot traffic, and missed watering make recovery harder. Damage can pile up quickly.</p>
-<p>Lawns already under strain may stall completely. Stress reactions become more obvious during this time. <a href="how-grass-responds-to-stress.html">How Grass Responds to Stress</a> explains common patterns.</p>
+<p>After scalping, the lawn has little room for error. Heavy foot traffic, extreme heat, or skipped watering can stop recovery altogether. Damage adds up quickly during this vulnerable phase.</p>
+<p>Lawns that face repeated stress often slide backward instead of improving. <a href="how-grass-responds-to-stress.html">How Grass Responds to Stress</a> helps explain these setbacks. The takeaway is to reduce pressure on the lawn until growth clearly stabilizes.</p>
 
 <h2>Deciding what to do next</h2>
-<p>Some scalped lawns slowly recover with patience and lighter mowing. Others never return to a full, even state. Watching how the lawn responds over several weeks helps guide the decision.</p>
-<p>If improvement is minimal, repairs may outweigh the benefits. At that point, replacement or major renovation may be the better option. Making that call early can save time and effort.</p>
+<p>Some lawns recover fully with time and careful mowing. Others show minimal improvement despite weeks of waiting. Watching the trend matters more than hoping for a sudden turnaround.</p>
+<p>If progress remains poor, continuing to wait wastes time and effort. Replacement or major renovation may be the better move. The takeaway is to make a clear decision based on results, not wishful thinking.</p>
   </main>
 
   <footer class="site-footer">
