updated grass growing at night page

--- a/lawn-basics/does-grass-grow-at-night.html
+++ b/lawn-basics/does-grass-grow-at-night.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Does Grass Grow at Night</title>
-  <meta name="description" content="Grass can appear to grow overnight, but the real changes happen over time. Learn what affects growth timing and lawn appearance.">
+  <meta name="description" content="Grass does not suddenly grow overnight. Learn why lawns look taller in the morning and what really controls daily growth.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/does-grass-grow-at-night.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,17 +14,15 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Does Grass Grow at Night">
-  <meta name="twitter:description" content="Grass can appear to grow overnight, but the real changes happen over time. Learn what affects growth timing and lawn appearance.">
+  <meta name="twitter:description" content="Grass does not suddenly grow overnight. Learn why lawns look taller in the morning and what really controls daily growth.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Open Graph -->
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Does Grass Grow at Night">
-  <meta property="og:description" content="Grass can appear to grow overnight, but the real changes happen over time. Learn what affects growth timing and lawn appearance.">
+  <meta property="og:description" content="Grass does not suddenly grow overnight. Learn why lawns look taller in the morning and what really controls daily growth.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/does-grass-grow-at-night.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
 
@@ -47,46 +45,34 @@
       <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
-
-    <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        spellcheck="false"
-      >
-      <div id="searchResults" class="search-results"></div>
-    </div>
   </header>
 
   <main class="container">
     <h1>Does Grass Grow at Night</h1>
 
 <h2>Why grass looks taller in the morning</h2>
-<p>Many people notice their lawn looks taller first thing in the morning. This can make it seem like grass grows overnight. In reality, the change is gradual and easier to notice after several hours.</p>
-<p>Moisture and cooler temperatures often make grass stand more upright. That makes the lawn look fuller without new growth happening all at once. The effect is mostly visual.</p>
+<p>Many lawns look taller and fuller in the morning, which leads people to believe grass grows overnight. This change is mostly visual rather than new growth. Cooler air and moisture cause blades to stand upright.</p>
+<p>The grass did not suddenly grow while everyone slept. It simply looks different under morning conditions. The takeaway is that appearance can be misleading.</p>
 
 <h2>What actually affects daily growth</h2>
-<p>Grass grows based on conditions over time, not just during certain hours. Warm days, enough water, and regular mowing all influence how fast it fills in. Nighttime alone does not drive growth.</p>
-<p>When conditions stay steady, growth appears consistent from day to day. When something changes, growth slows or speeds up. These shifts are easier to notice over a week than overnight.</p>
+<p>Grass growth happens steadily over days, not in overnight bursts. Consistent watering, mowing, and weather patterns determine how fast a lawn fills in. Nighttime alone does not drive growth.</p>
+<p>When conditions stay steady, the lawn grows at a predictable pace. Sudden changes slow or speed that pace. The takeaway is to judge growth over weeks, not hours.</p>
 
 <h2>Why some areas seem to grow faster</h2>
-<p>Not all parts of a lawn behave the same way. Edges, sunny areas, and watered zones often grow unevenly. This can make it look like certain spots grow faster at night.</p>
-<p>Hard surfaces nearby can affect how grass behaves. Driveway edges often look different from the rest of the yard. <a href="why-grass-dies-along-driveways.html">Why Grass Dies Along Driveways</a> explains why those areas stand out.</p>
+<p>Different parts of a lawn behave differently. Sunny sections, edges, and watered zones stand out more quickly. This creates the illusion that certain areas grow faster.</p>
+<p>Hard surfaces make these differences more noticeable. Driveway edges often look worse or different from the rest of the yard. <a href="why-grass-dies-along-driveways.html">Why Grass Dies Along Driveways</a> explains these patterns, so the takeaway is to expect uneven behavior near pavement.</p>
 
 <h2>How mowing changes what you notice</h2>
-<p>Mowing resets how tall the lawn looks. After a cut, even small changes seem more noticeable. This can give the impression of fast growth.</p>
-<p>Repeated mowing over time affects how evenly the lawn fills in. Some lawns slowly thin out as years pass. <a href="why-lawns-decline-over-time.html">Why Lawns Decline Over Time</a> explains how that happens.</p>
+<p>Mowing resets the lawn’s appearance. After a cut, even small changes seem dramatic. This makes growth feel faster than it really is.</p>
+<p>Over time, repeated mowing shapes how the lawn looks and ages. Some lawns slowly thin year by year. <a href="why-lawns-decline-over-time.html">Why Lawns Decline Over Time</a> explains this process, so the takeaway is to focus on long-term trends.</p>
 
 <h2>What happens below the surface after mowing</h2>
-<p>Mowing does more than change appearance. It affects how the lawn responds afterward. The timing and height of cuts influence how evenly grass returns.</p>
-<p>Cutting too short too often can slow recovery. Over time, this weakens the lawn’s overall look. <a href="what-happens-to-grass-roots-when-you-mow.html">What Happens to Grass Roots When You Mow</a> explains this effect.</p>
+<p>Mowing affects more than just height. How often and how short you cut influences how evenly the lawn recovers. Poor mowing habits slow that recovery.</p>
+<p>Cutting too short too often leads to weaker results over time. <a href="what-happens-to-grass-roots-when-you-mow.html">What Happens to Grass Roots When You Mow</a> provides more detail. The takeaway is to mow consistently and avoid extremes.</p>
 
 <h2>What to expect from day to day</h2>
-<p>Grass does not suddenly grow while everyone sleeps. Growth is steady and shaped by conditions across many days. Morning changes are usually visual, not new growth.</p>
-<p>Watching the lawn over a week gives a clearer picture than checking it each night. Consistent care leads to steady results. Understanding that helps set realistic expectations.</p>
+<p>Grass does not grow in sudden nighttime spurts. Changes happen gradually and add up over time. Morning differences are usually visual.</p>
+<p>Watching the lawn over a full week gives a clearer picture than checking it daily. Consistent care produces predictable results. The takeaway is to manage expectations and focus on steady maintenance.</p>
   </main>
 
   <footer class="site-footer">
