--- a/lawn-basics/best-grass-types-for-cold-winters.html
+++ b/lawn-basics/best-grass-types-for-cold-winters.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Best Grass Types for Cold Winters</title>
-  <meta name="description" content="Cold winters can wreck the wrong lawn. Learn which grass types hold up best, recover faster in spring, and need fewer repairs each year.">
+  <meta name="description" content="Cold winters punish the wrong lawn. Choosing grass built for freezing weather leads to better spring recovery and fewer repairs.">
   <link rel="canonical" href="https://grizzlygreens.net/lawn-basics/best-grass-types-for-cold-winters.html">
 
   <link rel="stylesheet" href="/styles.css">
@@ -14,17 +14,15 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Best Grass Types for Cold Winters">
-  <meta name="twitter:description" content="Cold winters can wreck the wrong lawn. Learn which grass types hold up best, recover faster in spring, and need fewer repairs each year.">
+  <meta name="twitter:description" content="Cold winters punish the wrong lawn. Choosing grass built for freezing weather leads to better spring recovery and fewer repairs.">
   <meta name="twitter:image" content="https://grizzlygreens.net/og-default.png">
 
-  <!-- Open Graph -->
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-
   <meta property="og:type" content="article">
   <meta property="og:site_name" content="GrizzlyGreens.net">
   <meta property="og:title" content="Best Grass Types for Cold Winters">
-  <meta property="og:description" content="Cold winters can wreck the wrong lawn. Learn which grass types hold up best, recover faster in spring, and need fewer repairs each year.">
+  <meta property="og:description" content="Cold winters punish the wrong lawn. Choosing grass built for freezing weather leads to better spring recovery and fewer repairs.">
   <meta property="og:url" content="https://grizzlygreens.net/lawn-basics/best-grass-types-for-cold-winters.html">
   <meta property="og:image" content="https://grizzlygreens.net/og-default.png">
 
@@ -47,46 +45,34 @@
       <a href="/soil-fertilizer/" class="nav-link">Soil, Fertilizer &amp; Amendments</a>
       <a href="/tools-safety/" class="nav-link">Tools &amp; Yard Safety</a>
     </nav>
-
-    <div class="search-wrap" role="search">
-      <input
-        id="siteSearch"
-        class="search"
-        type="search"
-        placeholder="Search GrizzlyGreens..."
-        autocomplete="off"
-        spellcheck="false"
-      >
-      <div id="searchResults" class="search-results"></div>
-    </div>
   </header>
 
   <main class="container">
     <h1>Best Grass Types for Cold Winters</h1>
 
-<h2>Why winter survival starts with grass choice</h2>
-<p>Cold winters can be rough on lawns that are not built for freezing weather. Some lawns thin out, turn ugly, or come back patchy in spring. The right grass choice makes winter less of a yearly setback.</p>
-<p>A lawn that fits the climate usually looks better with less work. It comes out of winter more even and needs fewer repairs. That saves time and money every year.</p>
+<h2>Why winter exposes weak lawns</h2>
+<p>Cold winters quickly reveal whether a lawn is built for freezing weather. Some lawns thin out, turn patchy, or disappear in spots after repeated cold snaps. This damage usually shows up clearly once spring arrives.</p>
+<p>When grass is not suited for winter, recovery becomes a yearly battle. Choosing a cold-tolerant lawn avoids that cycle.</p>
 
-<h2>Grass that handles freezing and snow better</h2>
-<p>The best winter grasses are the ones that stay steady through repeated freezes. They don’t disappear after snow sits on them for days. That means fewer bare spots when the weather finally breaks.</p>
-<p>Weak areas often show up first near pavement and edges. Those spots get hit harder by cold, wind, and heat changes. <a href="why-grass-dies-along-driveways.html">Why Grass Dies Along Driveways</a> is a helpful reference when those strips keep failing.</p>
+<h2>Grass that survives freezing temperatures</h2>
+<p>Grass that handles winter well stays anchored through snow, ice, and repeated freezes. It may lose color for a time, but it does not vanish. That stability makes spring recovery much easier.</p>
+<p>Lawns that lack this tolerance often lose coverage along edges and open areas first. These weak spots rarely fix themselves without intervention.</p>
 
-<h2>Spring recovery and early green-up</h2>
-<p>Cold-hardy lawns usually look decent sooner once spring shows up. They fill in quicker and don’t stay thin for weeks. That makes the yard look “normal” earlier in the season.</p>
-<p>If the grass type is a poor match, spring can be a long cleanup. Thin spots linger and weeds move in fast. <a href="what-type-of-grass-do-i-have.html">What Type of Grass Do I Have</a> is a quick way to confirm what is already growing.</p>
+<h2>Spring recovery and early season appearance</h2>
+<p>Cold-hardy lawns usually start filling in sooner once temperatures rise. The yard looks more complete early in the season instead of thin and uneven. This reduces the need for aggressive repairs.</p>
+<p>When grass struggles to return, the issue is often the type growing in the yard. <a href="what-type-of-grass-do-i-have.html">What Type of Grass Do I Have</a> helps identify whether winter damage is expected or avoidable.</p>
 
-<h2>Cold weather wear and foot traffic</h2>
-<p>Winter still brings wear from walking, pets, and shoveling paths. A good winter lawn holds together better and looks less beat up later. The yard won’t look as stomped down when it warms up.</p>
-<p>Some lawns show traffic damage all winter and never fully recover in spring. Paths stay thin because they get worn down again and again. Picking a winter-tough grass helps those areas stay fuller.</p>
+<h2>Cold damage near pavement and hard surfaces</h2>
+<p>Winter damage often appears first near driveways, sidewalks, and curbs. These areas experience more temperature swings and moisture loss. Grass there faces harsher conditions than the rest of the yard.</p>
+<p>Repeated failure along these edges points to a poor match between grass and environment. <a href="why-grass-dies-along-driveways.html">Why Grass Dies Along Driveways</a> explains why those zones struggle year after year.</p>
 
-<h2>Establishing grass before winter hits</h2>
-<p>New grass that goes into winter too early or too late often fails. If it hasn’t had time to settle in, cold weather can wipe out big sections. Timing matters just as much as the seed choice.</p>
-<p>Most new-lawn failures come from simple setup mistakes. Overwatering, poor soil contact, and bad timing are common. <a href="mistakes-that-kill-new-grass.html">Mistakes That Kill New Grass</a> covers the big ones.</p>
+<h2>Establishing grass before winter arrives</h2>
+<p>New lawns need time to settle before freezing weather hits. Grass planted too late often fails during its first winter. Timing matters as much as the seed choice.</p>
+<p>Many winter losses come from setup mistakes rather than cold alone. <a href="mistakes-that-kill-new-grass.html">Mistakes That Kill New Grass</a> outlines common errors that weaken young lawns.</p>
 
 <h2>Choosing grass for long-term winter success</h2>
-<p>The best choice is the grass that matches the winter in that area, year after year. When the lawn fits the climate, it needs fewer patches and less reseeding. The yard stays more even without constant work.</p>
-<p>Winter will always leave some wear, but it shouldn’t wipe out the lawn. A good match recovers faster and stays more consistent across seasons. That reliability is what makes the right grass choice worth it.</p>
+<p>The best grass for cold winters is one that survives year after year without major repairs. It comes out of winter thinner but intact, not bare and broken. That consistency makes lawn care simpler.</p>
+<p>Winter will always stress a lawn, but it should not erase it. Matching grass type to climate turns winter from a reset into a pause.</p>
   </main>
 
   <footer class="site-footer">
